stop filter panel overflowing

--- a/app/styles/_pages.less
+++ b/app/styles/_pages.less
@@ -231,6 +231,8 @@ html, body {
 @footer-height: 50px;
 
 body {
+  overflow-x: hidden;
+
   #page-map, #page-lists {
     height: 100%;
     position: relative;
